# nova-chain

./: .gitignore  CONTRIBUTING.md  Cargo.toml  Dockerfile.txt  LICENSE  README.md  blockchain.json  blockchain.json.bak  blockchain_testnet_backup.json  docker-compose.yml  index.html  start-network.bat  start-node1.bat  start-node10.bat  start-node2.bat  start-node3.bat  start-node4.bat  start-node5.bat  start-node6.bat  start-node7.bat  start-node8.bat  start-node9.bat
novachain-contracts/: Cargo.toml
smart-contracts/: Cargo.toml
smart-contracts/src/: lib.rs
src/: ai_models.rs  api.rs  balance.rs  blockchain.json  blockchain.rs  coin.rs  contract_manager.rs  cross_chain_bridge.rs  database.rs  flash_loan.rs  gaming_sdk.rs  governance.rs  layer2_scaling.rs  main.rs  metaverse.rs  models.rs  multisig.rs  network.rs  network_config.rs  nov_examples.rs  p2p.rs  quantum_resistance.rs  smart_contract.rs  social_fi.rs  sync.rs  wallet.rs
src/contract_templates/: ai_prediction.nova  defi_yield_vault.nova  gaming_nft.nova  multisig_2of3.nova  quantum_safe.nova
templates/: explorer.html
