[package]
name = "novachain-node"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10"
hex = "0.4"
tokio = { version = "1.0", features = ["full"] }
warp = "0.3"
lazy_static = "1.4"
log = "0.4"
env_logger = "0.10"
rand = "0.8"
base58 = "0.2"
ed25519-dalek = "2.0"
ring = "0.17.0"
data-encoding = "2.4"        # ✅ ADD THIS - For BASE64 encoding
getrandom = "0.2"           # ✅ ADD THIS - For random number generation